--- a/server/model-config.json
+++ b/server/model-config.json
@@ -36,5 +36,13 @@
   "employee": {
     "dataSource": "db",
     "public": true
+  },
+  "container": {
+    "dataSource": "storage",
+    "public": false
+  },
+  "confirmation": {
+    "dataSource": "db",
+    "public": true
   }
 }
