--- a/server/model-config.json
+++ b/server/model-config.json
@@ -44,5 +44,9 @@
   "confirmation": {
     "dataSource": "db",
     "public": true
+  },
+  "IssueReport": {
+    "dataSource": "db",
+    "public": true
   }
 }
