--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "posttest": "nsp check"
   },
   "dependencies": {
+    "angular": "^1.5.7",
+    "angular-chartist.js": "^3.3.13",
+    "chartist": "^0.9.8",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "helmet": "^1.3.0",
