--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,8 @@
     "angular-resource": "^1.5.7",
     "chartist": "^0.9.8",
     "angular-ui-router": "^0.3.1",
-    "moment": "^2.14.1"
+    "moment": "^2.14.1",
+    "angular-chart.js": "^0.10.2",
+    "angular-chart": "^0.5.0"
   }
 }
