--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,9 @@
     "angular-resource": "^1.5.7",
     "angular-ui-router": "^0.3.1",
     "moment": "^2.14.1",
-    "angular-fixed-table-header": "^0.2.1"
+    "angular-fixed-table-header": "^0.2.1",
+    "Chart.js": "^2.1.6",
+    "angular-chart.js": "^1.0.0",
+    "angularUtils-pagination": "angular-utils-pagination#^0.11.1"
   }
 }
