--- a/server/model-config.json
+++ b/server/model-config.json
@@ -63,5 +63,9 @@
   "Group": {
     "dataSource": "db",
     "public": true
+  },
+  "Member": {
+    "dataSource": "db",
+    "public": true
   }
 }
