--- a/server/model-config.json
+++ b/server/model-config.json
@@ -67,5 +67,13 @@
   "Member": {
     "dataSource": "db",
     "public": true
+  },
+  "Company": {
+    "dataSource": "db",
+    "public": true
+  },
+  "Region": {
+    "dataSource": "db",
+    "public": true
   }
 }
