--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^2.4.0",
     "loopback-component-storage": "^1.8.1",
-    "loopback-connector-mongodb": "^1.15.2",
-    "loopback-datasource-juggler": "^2.39.0",
+    "loopback-connector-mongodb": "1.13.0",
+    "loopback-datasource-juggler": "2.39.0",
     "serve-favicon": "^2.0.1"
   },
   "devDependencies": {
